view/app/app.css
/* 
    app.css
    altsource-viewer (https://github.com/therealFoxster/altsource-viewer)

    Copyright (c) 2023 Foxster.
    MIT License.
*/

a {
  color: var(--tint-color)
}

/* Main */

#main {
  overflow: hidden;
  /* padding-top: 7rem; */
}

#main .item {
  margin-bottom: 0;
  padding: 0 1rem;
}

#nav-bar #title,
#nav-bar .install {
  transition: opacity 0.25s ease-in-out;
}

#nav-bar #back-container {
  min-width: 78px;
}

/* IPA install & download */

.ipa {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.ipa #download {
  position: absolute;
  margin-top: 36px; /* 32px button height + 4px gap */
  font-size: 0.65em;
  font-weight: 450;
}

/* Preview */

#preview {
  position: relative;
}

#preview #subtitle {
  text-align: center;
  font-size: 0.9em;
  margin: 0 1em;
}

#preview .header {
  margin: 1em 0;
}

#preview #screenshots {
  display: flex;
  flex-direction: row;
  overflow-x: auto;
  padding-right: 1em;
  scroll-snap-type: x mandatory;
  scroll-padding-left: 1rem;
  -webkit-overflow-scrolling: touch;
}

#preview #screenshots>img {
  max-width: 70%;
  margin-left: 1em;
  border-radius: 0.5em;
  border: 0.75px solid rgba(0, 0, 0, 0.2);
  scroll-snap-align: start;
}

#preview #description {
  margin: 1em;
  -webkit-line-clamp: 5;
  line-clamp: 5;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  overflow: hidden;
  position: relative;
  word-wrap: break-word
}

/* What's new */

#whats-new,
#permissions {
  padding: 1em;
}

#whats-new .header,
#permissions .header,
#source .header {
  margin: 0.35em 0;
  padding: 0;
}

#whats-new .header>p {
  opacity: 0.5;
}

#whats-new #version-date {
  text-align: right;
}

#whats-new #version-description {
  -webkit-line-clamp: 3;
  line-clamp: 3;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  overflow: hidden;
  position: relative;
  word-wrap: break-word
}

/* Permissions */

#permissions .permission {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 0.75em;
  margin: 0.5em 0;
}

#permissions .permission i {
  font-size: 1.55em;
  color: var(--tint-color);
}

#permissions .permission .title {
  font-weight: 550;
}

#permissions .permission .description {
  font-size: 0.9em;
  opacity: 0.5;
}

#permission-containers {
  display: flex;
  flex-direction: column;
  gap: 1.75em;
  margin-top: 1em;
  margin-bottom: 0.5em;
}

.permission-icon {
  color: var(--tint-color) !important;
  font-size: 2em;
}

.permission-container {
  border-radius: 1.5em;
  padding: 1.25em;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
}

.permission-container-header {
  text-align: center;
  margin-bottom: 0.5em;
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.permission-container p.description {
  opacity: 0.5;
  line-height: 1.5em;
}

.permission-container p {
  font-size: 0.9em;
}

.permission-container b {
  font-size: 1.25em;
}

.permission-items {
  margin: 1em 0 0.5em;
  display: grid;
  grid-template-columns: 49.25% 49.25%;
  row-gap: 8px;
  column-gap: 8px;
}

.permission-item {
  display: flex;
  align-items: center;
  gap: 8px;
  width: fit-content;
  font-size: 0.85em;
  color: black;
}

.permission-item i {
  font-size: 1.5em !important;
}

/* Source */
#source {
  padding-top: 0;
}

#source .header {
  margin: 1rem;
}

#source .row {
  display: flex;
  flex-direction: column;
  gap: 0.15em;
  /* justify-content: space-between; */
  /* margin: 1em 0; */
}

#source .container {
  color: unset;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin: 0.55em 0;
  gap: 0.5em;
}

#source .row>.row-title {
  font-size: 1.05em;
  color: var(--tint-color) !important;
}

#source .bi {
  -webkit-text-stroke: 0.25px;
  color: var(--tint-color);
}

#source .row>.row-subtitle {
  color: unset;
  font-size: 0.9em;
  opacity: 0.5;
  -webkit-line-clamp: 3;
  line-clamp: 3;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  overflow: hidden;
  position: relative;
  word-wrap: break-word
}

